--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav {text-align: center;}
 
 .script .text p {font-size: 18px; line-height: 1.8em;}
 
-.date {font-size: 12px; color: #E6625E;}
+.date {font-size: 12px; color: #0BBCD6;}
 .tags {background-color: black; color: white; padding: 3px; text-transform: uppercase;}
 
 a {color: #0BBCD6;}
