--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav {text-align: center;}
 
 .lgr {font-size: 1.2em;}
 
-.script .text p {font-size: 18px; line-height: 1.8em;}
+p {font-size: 18px; line-height: 1.8em;}
 
 .date {font-size: 12px; color: #0BBCD6;}
 .tags, .about {background-color: black; color: white; padding: 3px 10px; margin: 0 5px; text-transform: uppercase;}
